--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,6 +7,16 @@ on:
     branches: [ main ]
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Go Lint
+      uses: golangci/golangci-lint-action@v2
+      with:
+        version: latest
+
 
   build:
     runs-on: ubuntu-latest
