--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,20 +1,25 @@
 name: Go
+
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
 
-build:
-  runs-on: ubuntu-latest
-  steps:
-  - uses: actions/checkout@v2
+jobs:
 
-  - name: Set up Go
-  uses: actions/setup-go@v2
-  with:
-    go-version: 1.17
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
 
-  - name: Build
-  run: go build -v ./...
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.17
 
+    - name: Build
+      run: go build -v ./...
+
+    - name: Test
+      run: go test -v ./...
